fixed issue with text buttons being too wide not centering on page

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -409,5 +409,6 @@ hr {
     .col-sm-6 {
         margin-left: 0px;
         padding-left: 0px;
+        padding-right: 0px;
     }
 }
